--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html" class="logo">Mi Tienda de Autos</a>
+      <a href="../index.html" class="logo">Mi Tienda de Autos</a>
       <ul>
         <li><a href="catalog.html">Catálogo</a></li>
         <li><a href="financing.html">Financiamiento</a></li>
@@ -40,6 +40,6 @@
     <button id="clear-cart-btn" class="btn">Vaciar Carrito</button>
   </main>
 
-  <script src="script.js"></script>
+  <script src="/frontend/scripts.js"></script>
 </body>
 </html>
