--- a/frontend/catalog.html
+++ b/frontend/catalog.html
@@ -9,13 +9,13 @@
 <body>
   <header>
     <nav>
-      <a href="index.html" class="logo">Mi Tienda de Autos</a>
+      <a href="../index.html" class="logo">Tienda de Autos</a>
       <ul>
         <li><a href="catalog.html">Catálogo</a></li>
         <li><a href="financing.html">Financiamiento</a></li>
         <li><a href="contact.html">Contacto</a></li>
         <li class="cart-icon">
-          <a href="cart.html">
+          <a href="/frontend/cart.html">
             <i class="fas fa-shopping-cart"></i>
             <span class="cart-items-count">0</span>
           </a>
@@ -37,6 +37,6 @@
     </div>
   </main>
 
-  <script src="scripts.js"></script>
+  <script src="/frontend/scripts.js"></script>
 </body>
 </html>
