--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html" class="logo">Mi Tienda de Autos</a>
+      <a href="../index.html" class="logo">Mi Tienda de Autos</a>
       <ul>
         <li><a href="catalog.html">Catálogo</a></li>
         <li><a href="financing.html">Financiamiento</a></li>
@@ -32,6 +32,6 @@
     <!-- Aquí puedes agregar un formulario de contacto u otra información de contacto -->
   </main>
 
-  <script src="script.js"></script>
+  <script src="/frontend/scripts.js"></script>
 </body>
 </html>
