--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tu Tienda de Autos</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/frontend/styles.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -16,11 +16,11 @@
         <div class="logo">Tu Tienda de Autos</div>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="catalog.html">Catálogo</a></li>
-          <li><a href="financing.html">Financiamiento</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="/frontend/catalog.html">Catálogo</a></li>
+          <li><a href="/frontend/financing.html">Financiamiento</a></li>
+          <li><a href="/frontend/contact.html">Contacto</a></li>
           <li>
-            <a href="cart.html" class="cart-icon"
+            <a href="/frontend/cart.html" class="cart-icon"
               >Carrito<span class="cart-items">0</span></a
             >
           </li>
@@ -29,7 +29,7 @@
       <div class="hero">
         <h1>Bienvenido a Tu Tienda de Autos</h1>
         <p>Encuentra el auto de tus sueños</p>
-        <a href="catalog.html" class="cta-button">Ver Catálogo</a>
+        <a href="/frontend/catalog.html" class="cta-button">Ver Catálogo</a>
       </div>
     </header>
 
@@ -44,7 +44,7 @@
         <!-- Slide 1 -->
         <div class="carousel-item active">
           <img
-            src="images/fordFiestaSedanAzul2013.png"
+            src="/frontend/images/fordFiestaSedanAzul2013.png"
             alt="Ford Fiesta"
             class="carousel-image"
           />
@@ -53,7 +53,7 @@
         <!-- Slide 2 -->
         <div class="carousel-item">
           <img
-            src="images/ChevroletCruzeSedanAzul.jpg"
+            src="/frontend/images/ChevroletCruzeSedanAzul.jpg"
             alt="Chevrolet Cruze"
             class="carousel-image"
           />
@@ -62,7 +62,7 @@
         <!-- Slide 3 -->
         <div class="carousel-item">
           <img
-            src="images/volkswagen_golf.jpg"
+            src="/frontend/images/volkswagen_golf.jpg"
             alt="Volkswagen Golf"
             class="carousel-image"
           />
@@ -71,7 +71,7 @@
         <!-- Slide 4 -->
         <div class="carousel-item">
           <img
-            src="images/toyota_rav4.jpg"
+            src="/frontend/images/toyota_rav4.jpg"
             alt="Toyota RAV4"
             class="carousel-image"
           />
@@ -104,6 +104,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="/frontend/scripts.js"></script>
   </body>
 </html>
