--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       </div>
     </header>
 
-    <div id="carCarousel" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide d-flex justify-content-center" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#carCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carCarousel" data-slide-to="1"></li>
-        <li data-target="#carCarousel" data-slide-to="2"></li>
-        <li data-target="#carCarousel" data-slide-to="3"></li>
+        <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleControls" data-slide-to="1"></li>
+        <li data-target="#carouselExampleControls" data-slide-to="2"></li>
+        <li data-target="#carouselExampleControls" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <!-- Slide 1 -->
@@ -80,7 +80,7 @@
       </div>
       <a
         class="carousel-control-prev"
-        href="#carCarousel"
+        href="#carouselExampleControls"
         role="button"
         data-slide="prev"
       >
@@ -89,7 +89,7 @@
       </a>
       <a
         class="carousel-control-next"
-        href="#carCarousel"
+        href="#carouselExampleControls"
         role="button"
         data-slide="next"
       >
