--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
   <body>
     <header>
       <nav>
-        <div class="logo">Tu Tienda de Autos</div>
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="/frontend/catalog.html">Catálogo</a></li>
           <li><a href="/frontend/financing.html">Financiamiento</a></li>
           <li><a href="/frontend/contact.html">Contacto</a></li>
-          <li>
-            <a href="/frontend/cart.html" class="cart-icon"
-              >Carrito<span class="cart-items">0</span></a
-            >
-          </li>
+          <li><a href="/frontend/cart.html" class="cart-icon">Carrito<span class="cart-items">0</span></a></li>
         </ul>
+        <div class="logo">Tu Tienda de Autos</div>
       </nav>
       <div class="hero">
         <h1>Bienvenido a Tu Tienda de Autos</h1>
@@ -32,78 +28,81 @@
         <a href="/frontend/catalog.html" class="cta-button">Ver Catálogo</a>
       </div>
     </header>
+    
 
-    <div id="carouselExampleControls" class="carousel slide d-flex justify-content-center" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-        <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-        <li data-target="#carouselExampleControls" data-slide-to="3"></li>
-      </ol>
-      <div class="carousel-inner">
-        <!-- Slide 1 -->
-        <div class="carousel-item active">
-          <img
-            src="/frontend/images/fordFiestaSedanAzul2013.png"
-            alt="Ford Fiesta"
-            class="carousel-image"
-          />
-          <p class="car-model">Ford Fiesta</p>
+    <div class="carousel-container">
+      <div id="carCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carCarousel" data-slide-to="1"></li>
+          <li data-target="#carCarousel" data-slide-to="2"></li>
+          <li data-target="#carCarousel" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <!-- Slide 1 -->
+          <div class="carousel-item active">
+            <img
+              src="/frontend/images/fordFiestaSedanAzul2013.png"
+              alt="Ford Fiesta"
+              class="carousel-image first-image"
+            />
+            <p class="car-model">Ford Fiesta</p>
+          </div>
+
+          <!-- Slide 2 -->
+          <div class="carousel-item">
+            <img
+              src="/frontend/images/ChevroletCruzeSedanAzul.jpg"
+              alt="Chevrolet Cruze"
+              class="carousel-image"
+            />
+            <p class="car-model">Chevrolet Cruze</p>
+          </div>
+          <!-- Slide 3 -->
+          <div class="carousel-item">
+            <img
+              src="/frontend/images/volkswagen_golf.jpg"
+              alt="Volkswagen Golf"
+              class="carousel-image"
+            />
+            <p class="car-model">Volkswagen Golf</p>
+          </div>
+          <!-- Slide 4 -->
+          <div class="carousel-item">
+            <img
+              src="/frontend/images/toyota_rav4.jpg"
+              alt="Toyota RAV4"
+              class="carousel-image"
+            />
+            <p class="car-model">Toyota RAV4</p>
+          </div>
         </div>
-        <!-- Slide 2 -->
-        <div class="carousel-item">
-          <img
-            src="/frontend/images/ChevroletCruzeSedanAzul.jpg"
-            alt="Chevrolet Cruze"
-            class="carousel-image"
-          />
-          <p class="car-model">Chevrolet Cruze</p>
-        </div>
-        <!-- Slide 3 -->
-        <div class="carousel-item">
-          <img
-            src="/frontend/images/volkswagen_golf.jpg"
-            alt="Volkswagen Golf"
-            class="carousel-image"
-          />
-          <p class="car-model">Volkswagen Golf</p>
-        </div>
-        <!-- Slide 4 -->
-        <div class="carousel-item">
-          <img
-            src="/frontend/images/toyota_rav4.jpg"
-            alt="Toyota RAV4"
-            class="carousel-image"
-          />
-          <p class="car-model">Toyota RAV4</p>
-        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carCarousel"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carCarousel"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Siguiente</span>
+        </a>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Siguiente</span>
-      </a>
     </div>
 
     <footer>
-      <p>Tu Tienda de Autos &copy; 2023. Todos los derechos reservados.</p>
+      <p>Tu Tienda de Autos &copy; 2023</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/frontend/scripts.js"></script>
   </body>
 </html>
